# sqlx-crud

./: .gitignore  Cargo.toml  README.md
migrations/: 20231118100813_todos.up.sql
src/: main.rs
